keyvalues-serde/tests/special_cases/snapshots/stub__special_cases__deserialize_any_values.snap
---
source: keyvalues-serde/tests/special_cases/mod.rs
expression: any_holder
---
AnyHolder {
    foo: StructureDefinedType {
        inner: "Value",
        str_key: "String",
        obj_key: {
            "key": "value",
        },
        seq_key: [
            "first",
            "second",
        ],
    },
}
