keyvalues-serde/tests/special_cases/snapshots/stub__special_cases__snapshot_writing-to_writer_with_key.snap
---
source: keyvalues-serde/tests/special_cases/mod.rs
expression: "std::str::from_utf8(&buf)?"
---
"Custom"
{
	"inner"	"123"
}
